# faster-rwkv

./: .gitignore  CMakeLists.txt  README.md  abc_music.cpp  bench_model.cpp  build_host_protoc.sh  chat.cpp  chat_speculative_decoding.cpp  check.h  compare.py  dlpack_tensor.cpp  dlpack_tensor.h  download_binaries_and_models_termux.sh  export_ncnn.cpp  export_onnx.cpp  half.hpp  midi_music.cpp  model.cpp  model.h  pipeline.h  rwkv.fbs  sampler.cpp  sampler.h  speculative_chat.cpp  tensor.cpp  tensor.h  test_model.cpp  test_ops.cpp  test_tokenizer.cpp  tokenizer.cpp  tokenizer.h  tokenizer_model  utils.cpp  utils.h
.github/workflows/: build-test.yml
aar/: CMakeLists.txt  build_aar.sh  fr_jni.cpp  jni_handle.h
aar/java/: .gitignore  build.gradle.kts  settings.gradle.kts
aar/java/faster-rwkv-java/: build.gradle.kts
aar/java/faster-rwkv-java/src/main/java/com/rwkv/faster/: ABCTokenizer.java  Model.java  Sampler.java  Tokenizer.java  WorldTokenizer.java
aar/java/gradle/wrapper/: gradle-wrapper.properties
android-example/: MainActivity.java  README.md
cmake/: disable_unused_ncnn_layers.cmake
docs/: add_new_graph_grained_backend.md
export_onnx/: CMakeLists.txt  export_onnx.cpp
export_onnx/python/: CMakeLists.txt  pyproject.toml  rwkv2onnx_python.cpp  setup.py
export_onnx/python/rwkv2onnx/: .gitignore  __init__.py
kernels/: allocator.h  graph_backend.h  kernels.h  macro.h  registry.h
kernels/cpu/: allocator.cpp  basic_math.cpp  cast_dtype.cpp  fill.cpp  flip.cpp  pad.cpp  reduce.cpp  repeat.cpp  slice.cpp  softmax.cpp  transpose.cpp
kernels/cpu/activations/: relu.cpp
kernels/cuda/: allocator.cpp  att.cu  att_seq.cu  cast_dtype.cu  cat.cu  element_wise.cu  element_wise.cuh  ffn.cu  ffn_seq.cu  fill.cu  flip.cu  group_norm.cu  layer_norm.cu  layer_norm.cuh  matmul.cpp  matmul.h  pad.cu  reduce.cu  repeat.cu  slice.cu  transpose.cu  util.cuh
kernels/cuda/activations/: silu.cu
kernels/default/: att.cpp  ffn.cpp  flip.cpp  gather_ops.cpp  init_model.cpp  model_forward.cpp  model_forward_seq.cpp  pad.cpp  slice.cpp  transpose.cpp  view_ops.cpp
kernels/export-ncnn/: README.md  kernels.cpp  kernels.h
kernels/export-onnx/: kernels.cpp  kernels.h
kernels/ncnn/: cast_dtype.cpp  element_wise.cpp  extra.h  init_model.cpp  matmul.cpp  model_forward.cpp
kernels/ncnn-meta/: kernels.cpp  kernels.h
kernels/onnx/: extra.h  init_model.cpp  model_forward.cpp
kernels/onnx-meta/: kernels.cpp  kernels.h
kernels/shape/: shape_inference.cpp  shape_inference.h
python/: CMakeLists.txt  README.md  fr_python.cpp  pyproject.toml  setup.py
python/example/: chat.py
python/fasterrwkv/: __init__.py
python/tests/: lambada_ppl.py  test_fr.py
tests/: CMakeLists.txt  lambada_ppl.py  run_abc_benchmark.cpp  run_abc_benchmark.py  test_dlpack_tensor.cpp  test_model.cpp  test_ops.cpp  test_sampler.cpp  test_tokenizer.cpp  utils.h
tests/benchmark/: common.h  random.cpp  random.h  tensor_cache.h
tests/benchmark/kernels/: transpose.cpp
tools/: CMakeLists.txt  convert_midi_tokenizer.py  convert_music_tokenizer.py  convert_tokenizer.py  convert_txt_tokenizer.py  convert_weight.py  generate_simple_abc_tokenizer.py  generate_state.cpp  preprocess_init_prompt.py  requirements.txt
