[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "fasterrwkv"
dynamic = [ "version" ]
keywords = [ "deep-learning", "RWKV" ]
authors = [
    { name = "daquexian", email = "daquexian566@gmail.com" },
]
description = "Faster RWKV"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "importlib_resources",
    "numpy",
]

[tool.setuptools_scm]
root = ".."
