[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv2onnx"
dynamic = [ "version" ]
keywords = [ "deep-learning", "RWKV" ]
authors = [
    { name = "daquexian", email = "daquexian566@gmail.com" },
]
description = "RWKV to ONNX (powered by Faster RWKV)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dependencies = [
    "importlib_resources",
    "numpy",
]

[tool.setuptools_scm]
root = "../.."

