[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv2onnx"
dynamic = [ "version" ]
keywords = [ "deep-learning", "RWKV" ]
authors = [
    { name = "daquexian", email = "daquexian566@gmail.com" },
]
description = "RWKV to ONNX (powered by Faster RWKV)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "importlib_resources",
    "msgpack",
    "rich",
]

[project.scripts]
rwkv2onnx = "rwkv2onnx:main"

[tool.setuptools_scm]
root = "../.."

